@@ -1,6 +1,10 @@
 * Mon Nov 26 2012 Dan Prince <dprince@redhat.com> - 1.2.5
   - Libvirt: ping test instances to ensure they have IPs before
     trying to configure hosts, etc.
+  - Generate server group IDs with using Time.now.to_f
+    which gives us millisecond accuracy. This should avoid ID
+    collisions which could occur if two groups were spun up
+    in the same second (thus causing image name collisions, etc)
 
 * Thu Oct 8 2012 Dan Prince <dprince@redhat.com> - 1.2.4
   - XenServer: Delete VDI's that aren't in use during cleanup.
